<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:fillViewport="true"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/post_content_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/post_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginRight="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:textSize="22sp"
                android:hint="@string/post_title"
                android:inputType="textCapSentences|textAutoCorrect" />

            <org.wordpress.android.util.widgets.WPEditText
                android:id="@+id/post_content"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:maxLength="10000000"
                android:layout_marginLeft="@dimen/post_editor_content_side_margin"
                android:layout_marginRight="@dimen/post_editor_content_side_margin"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:layout_weight="1"
                android:hint="@string/post_content"
                android:background="@null"
                android:lineSpacingExtra="4dp"
                android:textSize="18sp"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:imeOptions="flagNoExtractUi"
                android:textColorLink="@color/legacy_placeholder_content_text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/post_settings_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_divider" />

        <Button
            android:id="@+id/post_settings_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_post_settings"
            android:background="@drawable/selectable_background_wordpress"
            android:text="@string/post_settings"
            android:drawablePadding="6dp"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/format_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/legacy_format_bar_height"
        android:layout_gravity="bottom"
        android:background="@color/legacy_format_bar_background"
        android:orientation="horizontal"
        android:visibility="gone">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/bold"
                    style="@style/LegacyToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/format_bar_description_bold"
                    android:background="@drawable/legacy_format_bar_button_bold_selector" />

                <ToggleButton
                    android:id="@+id/em"
                    style="@style/LegacyToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/format_bar_description_italic"
                    android:background="@drawable/legacy_format_bar_button_italic_selector" />

                <ToggleButton
                    android:id="@+id/underline"
                    style="@style/LegacyToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/format_bar_description_underline"
                    android:background="@drawable/legacy_format_bar_button_underline_selector" />

                <ToggleButton
                    android:id="@+id/strike"
                    style="@style/LegacyToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/format_bar_description_strike"
                    android:background="@drawable/legacy_format_bar_button_strike_selector" />

                <ToggleButton
                    android:id="@+id/bquote"
                    style="@style/LegacyToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/format_bar_description_quote"
                    android:background="@drawable/legacy_format_bar_button_quote_selector" />

                <Button
                    android:id="@+id/link"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:minWidth="@dimen/legacy_format_bar_height"
                    android:contentDescription="@string/format_bar_description_link"
                    android:background="@drawable/legacy_format_bar_button_link_selector" />

                <Button
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:minWidth="@dimen/legacy_format_bar_height"
                    android:contentDescription="@string/format_bar_description_more"
                    android:background="@drawable/legacy_format_bar_button_more_selector" />
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/addPictureButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:minWidth="@dimen/legacy_format_bar_height"
            android:contentDescription="@string/format_bar_description_media"
            android:background="@drawable/legacy_format_bar_button_media_selector" />
    </LinearLayout>

</LinearLayout>
