<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/image_settings_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/image_settings_dialog_extra_margin"
        android:layout_marginRight="@dimen/image_settings_dialog_extra_margin"
        android:orientation="vertical"
        android:padding="@dimen/image_settings_dialog_padding">

        <TextView
            style="@style/ImageOptionsDialogLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/image_title"
            style="@style/ImageOptionsDialogInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/image_caption_label"
            style="@style/ImageOptionsDialogLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_caption"/>

        <EditText
            android:id="@+id/image_caption"
            style="@style/ImageOptionsDialogInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"/>

        <TextView
            style="@style/ImageOptionsDialogLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_alt_text"/>

        <EditText
            android:id="@+id/image_alt_text"
            style="@style/ImageOptionsDialogInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/alignment_spinner_label"
            style="@style/ImageOptionsDialogLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_alignment"/>

        <Spinner
            android:id="@+id/alignment_spinner"
            style="@style/ImageOptionsDialogInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_settings_dialog_input_field_start_margin"
            android:layout_marginStart="@dimen/image_settings_dialog_input_field_start_margin"
            android:entries="@array/alignment_array"
            android:prompt="@string/image_alignment"/>

        <TextView
            android:id="@+id/image_link_to_label"
            style="@style/ImageOptionsDialogLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_link_to"/>

        <EditText
            android:id="@+id/image_link_to"
            style="@style/ImageOptionsDialogInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:singleLine="true"/>

        <TextView
            style="@style/ImageOptionsDialogLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_width"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/media_icon_32dp"/>

            <SeekBar
                android:id="@+id/image_width_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/image_icon"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/image_width_text"
            style="@style/ImageOptionsDialogInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:text=""/>

        <CheckBox
            android:id="@+id/featuredImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/image_settings_dialog_input_field_start_margin"
            android:layout_marginStart="@dimen/image_settings_dialog_input_field_start_margin"
            android:text="@string/featured"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
